#25 fix: absolute 대신 margin, align으로 수정, Head style 커스텀 추가

--- a/src/styles/concernwrite.module.scss
+++ b/src/styles/concernwrite.module.scss
@@ -1,4 +1,4 @@
-@import '@/styles/common.scss';
+@import "@/styles/common.scss";
 
 .contain {
   width: 100%;
@@ -7,7 +7,7 @@
   .header {
     width: 100%;
     height: 56px;
-    background-color: #ffffff;
+    background-color: $base_white_ffffff;
     font-size: 18px;
     line-height: 24px;
     letter-spacing: -0.1px;
@@ -21,14 +21,16 @@
       left: 25px;
       top: 50%;
       transform: translate(0, -50%);
-      color: #707070;
+      color: $gray_0600_707070;
       cursor: pointer;
     }
+  }
+  .tab_menu {
+    border-bottom: 1px solid $gray_0200_EBEBEB;
   }
   .tab {
     width: 100%;
     height: 38px;
-    background-color: #ffffff;
     display: flex;
     justify-content: space-around;
 
@@ -38,12 +40,12 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      border-bottom: 2px solid black;
+      border-bottom: 2px solid $base_black_000000;
       font-weight: bold;
       font-size: 16px;
       line-height: 22px;
       letter-spacing: -0.1px;
-      color: #171717;
+      color: $gray_0900_171717;
     }
     .unactive {
       width: 30%;
@@ -54,7 +56,7 @@
       font-size: 16px;
       line-height: 22px;
       letter-spacing: -0.1px;
-      color: #333333;
+      color: $gray_0800_333333;
     }
   }
 }
