--- a/src/styles/write.module.scss
+++ b/src/styles/write.module.scss
@@ -1,52 +1,49 @@
-@import '@/styles/common.scss';
+@import "@/styles/common.scss";
 
 .all {
   position: relative;
   width: 100%;
-  height: 90%;
+  padding-top: 50px;
 
   .selectarea {
     width: 100%;
-    height: 10%;
     display: flex;
     justify-content: center;
     align-items: center;
+
     .category {
       width: 327px;
       height: 52px;
       border-radius: 12px;
-      border: 1px solid #ebebeb;
-      background-color: #f5f5f5;
+      border: 1px solid $gray_0200_EBEBEB;
+      background-color: $gray_0100_F5F5F5;
       padding: 16px;
+      margin: 24px 0;
       font-size: 14px;
       line-height: 20px;
       letter-spacing: -0.1px;
       outline: none;
       option {
-        color: #171717;
+        color: $gray_0900_171717;
       }
     }
   }
   .photoarea {
-    position: relative;
     width: 100%;
-    height: 10%;
     font-size: 16px;
     line-height: 22px;
     letter-spacing: -0.1px;
     font-weight: bold;
     padding: 0 24px;
     .photo {
-      position: absolute;
-      left: 24px;
+      text-align: left;
+      margin-bottom: 8px;
     }
     .upload {
-      position: absolute;
-      top: 24px;
       width: 68px;
       height: 68px;
-      border: 1px solid #ebebeb;
-      background-color: #f5f5f5;
+      border: 1px solid $gray_0200_EBEBEB;
+      background-color: $gray_0100_F5F5F5;
       border-radius: 12px;
       cursor: pointer;
       display: flex;
@@ -60,29 +57,26 @@
   }
   .titlearea {
     width: 100%;
-    height: 10%;
-    margin-top: 25px;
+    margin: 24px 0;
     padding: 0 24px;
     position: relative;
     .title {
-      position: absolute;
-      left: 24px;
+      text-align: left;
       font-size: 16px;
       line-height: 22px;
       letter-spacing: -0.1px;
       font-weight: bold;
+      margin-bottom: 8px;
     }
 
     input {
-      position: absolute;
-      top: 24px;
       width: 327px;
       height: 52px;
-      background-color: #f5f5f5;
+      background-color: $gray_0100_F5F5F5;
       border: none;
       border-radius: 12px;
       font-size: 14px;
-      color: #707070;
+      color: $gray_0600_707070;
       line-height: 20px;
       letter-spacing: -0.1px;
       outline: none;
@@ -91,42 +85,37 @@
   }
   .textarea {
     width: 100%;
-    height: 50%;
-    margin-top: 25px;
     padding: 0 24px;
     position: relative;
     display: flex;
     flex-direction: column;
+    margin-bottom: 24px;
 
     .text {
-      position: absolute;
-      left: 24px;
+      text-align: left;
       font-size: 16px;
       line-height: 22px;
       letter-spacing: -0.1px;
       font-weight: bold;
     }
     textarea {
-      position: absolute;
-      top: 24px;
       width: 327px;
       height: 250px;
-      background-color: #f5f5f5;
+      background-color: $gray_0100_F5F5F5;
       border: none;
       border-radius: 12px;
       resize: none;
       outline: none;
       padding: 16px;
       font-size: 14px;
-      color: #707070;
+      color: $gray_0600_707070;
       line-height: 20px;
       letter-spacing: -0.1px;
     }
   }
   .btnarea {
     width: 100%;
-    height: 10%;
-    background-color: #ffffff;
+    background-color: $base_white_ffffff;
     position: absolute;
     bottom: 0;
     display: flex;
@@ -141,7 +130,7 @@
       font-size: 16px;
       line-height: 22px;
       letter-spacing: -0.1px;
-      color: #3f54d1;
+      color: $brand_blue_200_3F54D1;
       font-weight: bold;
       display: flex;
       justify-content: center;
